fixed height of app on mobile devices

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -7,7 +7,7 @@
 body {
   background: #252329;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   line-height: 1.5;
   font-family: 'Noto Sans', sans-serif;
   color: rgba(224, 224, 224, 1);
