--- a/client/src/pages/Register/register.css
+++ b/client/src/pages/Register/register.css
@@ -1,5 +1,6 @@
 .register {
-  height: 100vh;
+  min-height: 100vh;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
